# StarterPack1

./: README.md
0/: README.md
1/: readme.md
1/1b/: Cargo.toml  readme.md
1/1c/: readme.md
1/1d/: readme.md
1/1e/: readme.md
1/src/: main.rs
10/: README.md
11/: README.md
13/: main.rs
14/: README.md
15/: README.md  main.rs
16/: README.md
17/: README.md
19/: hayreadthis!
2/: Cargo.toml  r.bat  readme.md
2/src/: main.rs
20/: main.rs
21/: functions.rs  readme.md
22/: Cargo.toml  main.rs
23/src/: Cargo.toml
24/: main.rs
25/: main.rs  readme.txt
26/: main.rs  readme.txt
27/: main.rs
28/: Readme.md  main.rs
29/: main.rs  readme.txt
3/: Cargo.toml  zEEE.bat
30/: main.rs  readme.txt
31/: readme.txt
32/: Cargo.toml  readme.md
33/: main.rs  readme.md
34/: README.md  main.rs
35/: README.md  c.bat  main.rs  report.txt
36/: README.md
37/: README.md
38/: README.md
39/: main.rs
4/: README.md  main.rs
40/: readme.md
41/: README.md  main.rs
42/: README.md
43/: README.md  main.rs
44/: README.md
45/: main.rs
46/: main.rs
49/: Cargo.toml
5/: README.md
52/: about.html  contact.html  index.html  main.rs  readme.md
53/: Cargo.toml  readme.md
54/: Cargo.toml  readme.md
55/: Cargo.toml
57/: Cargo.toml
58/: Cargo.toml  r1.bat  readme.md
59/: README.md
6/: README.md
60/: Cargo.toml  readme.md
61/: Cargo.toml  README.md
61/src/: main.rs
62/: 1.sh  2.sh  3.sh  4.sh  README.md
63/: Cargo.toml  readme.md
7/: README.md  main.rs
8/: README.md  main.rs
9/: README.md  main.rs
(+48 files in other folders)
