[package]
name = "aes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
rand = "0.8.5"
ring = "0.17.8"
zeroize = "1.8.1"
rust-argon2 = "2.1.0"
rpassword = "7.3.1"
clap = { version = "4.5.10", features = ["derive"] }

